--- a/templates/lender/layout.html
+++ b/templates/lender/layout.html
@@ -117,7 +117,7 @@
               Loan Processing Tracker
             </a>
           </li>
-          <!-- <li class="ylh-submenu-item">
+          {# <li class="ylh-submenu-item">
             <a
               href="{{ url_for('lender_roles') }}"
               class="ylh-submenu-link {% if path.startswith('/lender/roles') %}active{% endif %}"
@@ -125,7 +125,7 @@
               <span class="ylh-submenu-bullet"></span>
               Roles and Partners
             </a>
-          </li> -->
+          </li> #}
           <li class="ylh-submenu-item">
             <a
               href="{{ url_for('lender_documents') }}"
